fixed height of charts component on mobile

--- a/src/components/graphs/Graphs.css
+++ b/src/components/graphs/Graphs.css
@@ -7,6 +7,7 @@
     box-shadow: 0px 2px 9px -2px rgba(135,134,134,0.96);
     -webkit-box-shadow: 0px 2px 9px -2px rgba(135,134,134,0.96);
     -moz-box-shadow: 0px 2px 9px -2px rgba(135,134,134,0.96);
+    min-height: 100vh;
     
 }
 @media screen and (max-width: 800px) {
